# GPU_Optimzer

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  build.bat  build.sh  cuda_demo.cu  cuda_performance_demo.py  gpu_dashboard.py  gpu_load_test.py  requirements.txt  setup.py  setup_windows.ps1  simple_cuda_demo.py  simple_dashboard.py  simple_gpu_monitor.py
screenshots/: README.md
src/: main.cpp
src/common/: config.cpp  config.h  logger.cpp  logger.h
src/cuda/: CMakeLists.txt
src/cuda/matrix_ops/: matrix_kernels.cu  matrix_kernels.cuh
src/cuda/profiling/: cuda_profiler.h  timer.cpp  timer.h
src/cuda/vector_ops/: vector_kernels.cu  vector_kernels.cuh
src/nvml/: CMakeLists.txt  data_processor.cpp  data_processor.h  gpu_metrics.cpp  gpu_metrics.h  metrics_collector.cpp  metrics_collector.h  nvml_monitor.cpp  nvml_monitor.h
src/python/gpu_optimizer/: __init__.py
src/python/gpu_optimizer/dashboard/: __init__.py  app.py
tests/: CMakeLists.txt  test_main.cpp
